--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@emotion/react": "^11.12.0",
     "@emotion/styled": "^11.12.0",
     "@mui/material": "^5.16.4",
+    "@tanstack/eslint-plugin-query": "^5.51.12",
     "axios": "^1.7.2",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.51.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
