--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@emotion/styled": "^11.12.0",
     "@mui/material": "^5.16.4",
     "@tanstack/eslint-plugin-query": "^5.51.12",
+    "@tanstack/react-query": "^5.51.11",
     "axios": "^1.7.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-query": "^3.39.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.51.11",
