--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.12.0",
     "@emotion/styled": "^11.12.0",
     "@mui/material": "^5.16.4",
+    "@prisma/client": "^5.17.0",
     "@tanstack/eslint-plugin-query": "^5.51.12",
     "@tanstack/react-query": "^5.51.11",
     "axios": "^1.7.2",
@@ -28,6 +29,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "prisma": "^5.17.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
