--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.51.11",
     "axios": "^1.7.2",
     "next": "14.2.5",
+    "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.23.8"
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.51.11",
     "@types/node": "^20",
+    "@types/pg": "^8.11.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
